--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -2,13 +2,19 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
 
-    <item android:drawable="@color/colorSplash"/>
+    <item android:drawable="@color/colorSplash" />
 
-    <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/splash_logo"/>
-    </item>
+    <item
+        android:drawable="@drawable/ic_launcher_foreground"
+        android:gravity="center" />
+
+    <!--<item>
+        <layer-list>
+            <item
+                android:drawable="@drawable/ic_launcher_foreground"
+                android:gravity="center" />
+        </layer-list>
+    </item>-->
 
     <!--<item android:bottom="50dp">
         <bitmap
